add vuln test code